--- a/config.json
+++ b/config.json
@@ -30,15 +30,15 @@
 				},
 				"basic.footer_article_1": {
 					"type": "categoryPicker",
-					"required": false,
-					"deprecated": true,
+					"required": true,
+					"deprecated": false,
 					"label": "Config.footer_article_1",
 					"options": {}
 				},
 				"basic.footer_article_2": {
 					"type": "categoryPicker",
-					"required": false,
-					"deprecated": true,
+					"required": true,
+					"deprecated": false,
 					"label": "Config.footer_article_2",
 					"options": {}
 				}
