--- a/config.json
+++ b/config.json
@@ -83,6 +83,14 @@
 					"deprecated": false,
 					"label": "Config.home_category_4",
 					"options": {}
+				},
+				"basic.home_product_new": {
+					"type": "inputText",
+					"required": false,
+					"label": "Config.首页新品",
+					"options": {
+						"defaultValue": "139,147,153,155-184"
+					}
 				}
 			}
 		},
