--- a/config.json
+++ b/config.json
@@ -142,6 +142,10 @@
 							{
 								"value": "en",
 								"caption": "Config.languageActiveLanguagesEn"
+							},
+							{
+								"value": "it",
+								"caption": "Config.languageActiveLanguagesDe"
 							}
 						]
 					}
